--- a/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.css
+++ b/frontend/src/app/production/production-by-machine/production-shift/production-shift.component.css
@@ -1,18 +1,15 @@
-.short{
-    padding: 0% 0% 0% 0%;
-    margin: 0% 0% 0% 0%;
-}
-
 .smaller{
     height: 30px;
     width: 45px;
 }
 
-.small-break{
-    line-height: 0;
-}
-
 .in-button{
     float: right;
+    margin: auto;
+}
+
+.short{
+    vertical-align: middle;
+    text-align: center;
     margin: auto;
 }
